--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
+    "apollo-client-preset": "^1.0.8",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.4",
+    "react-apollo": "^3.1.5",
     "react-test-renderer": "16.11.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
