--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@react-navigation/native": "^5.4.3",
     "@react-navigation/stack": "^5.4.0",
     "@types/react-redux": "^7.1.9",
-    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
@@ -23,10 +22,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^2.0.0",
     "react-native-screens": "^2.8.0",
-    "react-native-splash-screen": "^3.2.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-axios-middleware": "^4.0.1"
+    "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
