--- a/package.json
+++ b/package.json
@@ -30,20 +30,27 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.62.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "16.9.2",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "apollo-client-preset": "^1.0.8",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^6.5.1",
     "graphql": "^15.0.0",
+    "graphql-request": "^2.0.0",
     "graphql-tag": "^2.10.3",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.4",
-    "react-apollo": "^3.1.5",
+    "react-native-config": "^1.2.0",
+    "react-native-dotenv": "^0.2.0",
+    "react-redux": "^7.2.0",
     "react-test-renderer": "16.11.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
